# openclaw-k8s-toggle-operator

./: .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  CLAUDE.md  DOCKERHUB_OVERVIEW.md  Dockerfile  HOWTO_MATRIX_KEYCLOAK_OAUTH.md  Makefile  README.md  build-container-multiarch.sh  matrix_cli.py  pyproject.toml  requirements-cli.txt  requirements-dev.txt  requirements.txt  test-jwt-login.sh
.github/workflows/: buildmultiarchandpush.yml  mypynpytests.yml
openclaw_k8s_toggle_operator/: __init__.py  __main__.py  config.py  jwt_login.py  matrix_client.py  operator.py  sso_login.py
repo_scripts/: blurimage.py  build-container-multiarch.sh  dh_login.py  include.sh  update_badge.py
scripts/: blurimage.py  initial_setup_github_dockerhub.sh  update_badge.py
tests/: test_config.py  test_jwt_login.py  test_matrix_client.py  test_sso_login.py
