[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["openclaw_k8s_toggle_operator"]

[project]
name = "openclaw-k8s-toggle-operator"
dynamic = ["version"]
authors = [
  { name="Henning Thie\u00df", email="ht@xomox.cc" },
]
description = "Matrix-controlled Kubernetes deployment toggle operator"
readme = "README.md"
requires-python = ">=3.14"
license-files = ["LICENSE.md"]

keywords = ["matrix", "kubernetes", "k8s", "operator", "deployment", "toggle", "chat-ops", "e2e-encryption"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",

    "Topic :: System :: Systems Administration",
    "Topic :: Communications :: Chat",

    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    'PyYAML>=6.0',
    'kubernetes>=28.1.0',
    'loguru>=0.7.3',
    'minimatrix>=0.0.12',
    'tabulate>=0.9.0',
]

[project.scripts]
openclaw-k8s-toggle-operator = "openclaw_k8s_toggle_operator.__main__:main"
openclaw-k8s-toggle-operator-conntest = "openclaw_k8s_toggle_operator.__main__:connectortest"

[project.urls]
Homepage = "https://github.com/vroomfondel/openclaw-k8s-toggle-operator"
Repository = "https://github.com/vroomfondel/openclaw-k8s-toggle-operator"
Issues = "https://github.com/vroomfondel/openclaw-k8s-toggle-operator/issues"

[tool.hatch.version]
path = "openclaw_k8s_toggle_operator/__init__.py"

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
python_files = "tests/*.py"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = '''(?x)(
    \.venv
    | venv
    | \.pyi$
    )'''

[[tool.mypy.overrides]]
module = [
    "nio",
    "nio.*",
    "kubernetes",
    "kubernetes.*",
    "pytesseract", "cv2", "numpy"
]
ignore_missing_imports = true
